# Slnc_Pi

./: .gitignore  .pi-lens.json  AI_CHANGELOG.md  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
docs/: AUTHOR_NOTES.md  CODE_STANDARDS.md  CONFIG.md  FEATURE_PLAN.md
extensions/: notification.ts
extensions/clean-status/: README.md  index.ts  package.json
extensions/context-pruner/: index.ts  package.json
extensions/conversation-saver/: index.ts  package.json
extensions/meilin-mcp/: meilin_mcp.py  sse_server.py
extensions/notification/: README.md  audio.ts  index.ts  markdown.ts  menu.ts  package.json  settings.ts
extensions/ollama-provider/: index.js  package.json
extensions/pi-core/: index.ts  package.json
extensions/pi-emote/: .gitignore  AGENTS.md  CHANGELOG.md  README.md  config.json  index.ts  package.json
extensions/pi-mcp-adapter/: README.md  agent-dir.ts  cli.js  commands.ts  config.ts  mcp-setup-panel.ts
extensions/system-prompt/: README.md  index.ts  menu.ts  package.json
extensions/tool-orchestrator/: index.ts  package.json
extensions/voice-input/: README.md  audio-capture.ts  index.ts  menu.ts  package.json  settings.ts  worker-client.ts
extensions/voice-input/worker/: pyproject.toml  sherpa_worker.py  voice_worker.py
pi-config/: AGENTS.md  APPEND_SYSTEM.md  README.md  mcp.json  models.json  notification.json  settings.json  trust.json  voice-input.json
pi-config/secrets/: auth.json.example
scripts/: setup-pi.ps1  setup-pi.sh
skills/caveman/: SKILL.md
skills/meilin-kb/: SKILL.md
(+28 files in other folders)
